--- a/src/app/pokemon/pokemon-edit/pokemon-edit.component.html
+++ b/src/app/pokemon/pokemon-edit/pokemon-edit.component.html
@@ -22,9 +22,31 @@
                     <input
                       type="text"
                       class="form-control"
+                      [class.is-invalid]="pokemonName.invalid"
                       formControlName="name"
                       placeholder="Nom du Pokémon"
                     />
+                    @if(pokemonName.hasError('required')) {
+                    <div class="invalid-feedback">
+                      Veuillez renseigner ce champ.
+                    </div>
+                    } @if(pokemonName.hasError('minlength')) {
+                    <div class="invalid-feedback">
+                      Veuillez saisir un nom plus long. (Minimum :
+                      {{ pokemonName.getError("minlength").requiredLength }}
+                      caractères)
+                    </div>
+                    } @if(pokemonName.hasError('maxlength')) {
+                    <div class="invalid-feedback">
+                      Veuillez saisir un nom plus court. (Maximum :
+                      {{ pokemonName.getError("maxlength").requiredLength }}
+                      caractères)
+                    </div>
+                    } @if(pokemonName.hasError('pattern')) {
+                    <div class="invalid-feedback">
+                      Veuillez saisir uniquement des lettres.
+                    </div>
+                    }
                   </td>
                 </tr>
                 <tr>
@@ -34,7 +56,10 @@
                       <button
                         type="button"
                         class="btn btn-outline-secondary"
-                        disabled
+                        [disabled]="
+                          pokemonLife.value <= POKEMON_RULES().MIN_LIFE
+                        "
+                        (click)="decrementLife()"
                       >
                         -
                       </button>
@@ -47,7 +72,10 @@
                       <button
                         type="button"
                         class="btn btn-outline-secondary"
-                        disabled
+                        [disabled]="
+                          pokemonLife.value >= POKEMON_RULES().MAX_LIFE
+                        "
+                        (click)="incrementLife()"
                       >
                         +
                       </button>
@@ -61,7 +89,10 @@
                       <button
                         type="button"
                         class="btn btn-outline-secondary"
-                        disabled
+                        [disabled]="
+                          pokemonDamage.value <= POKEMON_RULES().MIN_DAMAGE
+                        "
+                        (click)="decrementDamage()"
                       >
                         -
                       </button>
@@ -74,7 +105,10 @@
                       <button
                         type="button"
                         class="btn btn-outline-secondary"
-                        disabled
+                        [disabled]="
+                          pokemonDamage.value >= POKEMON_RULES().MAX_DAMAGE
+                        "
+                        (click)="incrementDamage()"
                       >
                         +
                       </button>
@@ -104,6 +138,16 @@
                         >x</span
                       >
                     </button>
+                    } @if(pokemonTypeList.hasError('required')){
+                    <p class="text-danger">
+                      Veuillez sélectionner au moins un type pour un Pokémon
+                    </p>
+                    } @if(pokemonTypeList.hasError('maxlength')){
+                    <p class="text-danger">
+                      Veuillez sélectionner au maximum
+                      {{ pokemonTypeList.getError("maxlength").requiredLength }}
+                      types pour un Pokémon
+                    </p>
                     }
                     <div class="row mt-3">
                       @for(type of pokemonService.getPokemonTypeList(); track
@@ -141,7 +185,10 @@
               </button>
               <button
                 type="submit"
-                class="btn btn-link text-decoration-none text-warning"
+                class="btn btn-link text-decoration-none"
+                [class.text-warning]="form.valid"
+                [class.text-secondary]="form.invalid"
+                [disabled]="form.invalid"
               >
                 SAUVEGARDER LES CHANGEMENTS
               </button>
@@ -152,4 +199,3 @@
     </div>
   </div>
 </div>
-
