--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -25,7 +25,7 @@
    <div class="container">
     <div class="row">
      @for(pokemon of pokemonListFiltered(); track pokemon.id) {
-     <div class="col-md-4">
+     <div class="col-md-4 pokemon-card" [routerLink]="['/pokemons', pokemon.id]">
       <div class="card mb-3" appPokemonBorder [pokemonType]="pokemon.types[0]">
        <div class="row g-0">
         <div 
@@ -45,25 +45,7 @@
           </h6>
           <p class="card-text">{{ pokemon.created | date: "dd/MM/yyyy" }}</p>
           <p class="card-text">Points de vie : {{ pokemon.life }}</p>
-          <div class="btn-group btn-group-sm" role="group">
-           <button
-            (click)="incrementLife(pokemon)"
-            class="btn btn-outline-secondary"
-            [disabled]="pokemon.life >= 30"
-           >
-            +
-           </button>
-           <button
-            (click)="decrementLife(pokemon)"
-            class="btn btn-outline-secondary"
-            [disabled]="pokemon.life <= 10"
-           >
-            -
-           </button>
-          </div>
-          <p class="card-text">
-            <a class="text small text-muted" [routerLink]="['/pokemons', pokemon.id]" >VOIR</a>
-          </p>
+          <p class="card-text">Dégats : {{ pokemon.damage }}</p>
          </div>
         </div>
        </div>
